<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

        <TextView
                android:id="@+id/tv_login"
                android:text="Login"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:padding="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="text"/>

        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/btn_submit"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:textColor="@android:color/white"
                android:text="submit"/>

    </LinearLayout>

</ScrollView>